Add missing `nullable: true` in `#/components/schemas/Product`
see https://github.com/spree/spree/blob/v4.4.0.rc1/api/spec/requests/spree/api/v2/storefront/products_spec.rb#L879-L882

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -2944,21 +2944,25 @@ components:
             description:
               type: string
               example: Example description
+              nullable: true
             available_on:
               type: string
               example: '2012-10-17T03:43:57Z'
+              nullable: true
             slug:
               type: string
               example: example-product
             price:
               type: string
               example: '15.99'
+              nullable: true
             currency:
               type: string
               example: USD
             display_price:
               type: string
               example: $15.99
+              nullable: true
             purchasable:
               type: boolean
               description: Indicates if any of Variants are in stock or backorderable
