Add missing `nullable: true` in `#/components/schemas/Address`

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -1861,6 +1861,7 @@ components:
               type: string
               example: CA
               description: State abbreviation
+              nullable: true
             country_name:
               type: string
               example: United States of America
