--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -2917,6 +2917,7 @@ components:
             description:
               type: string
               example: Stripe Payments
+              nullable: true
             preferences:
               type: object
       required:
