--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -57,6 +57,12 @@ paths:
                     email:
                       type: string
                       example: john@snow.org
+                    first_name:
+                      type: string
+                      example: John
+                    last_name:
+                      type: string
+                      example: Snow
                     password:
                       type: string
                       example: spree123
@@ -98,6 +104,12 @@ paths:
                     email:
                       type: string
                       example: john@snow.org
+                    first_name:
+                      type: string
+                      example: John
+                    last_name:
+                      type: string
+                      example: Snow
                     bill_address_id:
                       type: string
                       example: '1'
@@ -3631,6 +3643,12 @@ components:
             email:
               type: string
               example: spree@example.com
+            first_name:
+              type: string
+              example: John
+            last_name:
+              type: string
+              example: Doe
             store_credits:
               type: number
               example: 150.75
@@ -5081,6 +5099,8 @@ components:
                   type: user
                   attributes:
                     email: spree@example.com
+                    first_name: John
+                    last_name: Snow
                     store_credits: 0
                     completed_orders: 0
                     public_metadata:
