--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -72,7 +72,7 @@ paths:
                     public_metadata:
                       type: object
                       example:
-                        user_segment: 'supplier'
+                        user_segment: supplier
                       description: The public metadata for this User
                     private_metadata:
                       type: object
@@ -399,10 +399,10 @@ paths:
               properties:
                 public_metadata:
                   type: object
-                  description: 'The public metadata for the cart.'
+                  description: The public metadata for the cart.
                 private_metadata:
                   type: object
-                  description: 'The private metadata for the cart.'
+                  description: The private metadata for the cart.
       summary: Create a Cart
     delete:
       description: |-
@@ -473,10 +473,10 @@ paths:
                   type: integer
                 public_metadata:
                   type: object
-                  description: 'The public metadata for the added item.'
+                  description: The public metadata for the added item.
                 private_metadata:
                   type: object
-                  description: 'The private metadata for the added item.'
+                  description: The private metadata for the added item.
                 options:
                   type: object
                   description: 'Additional custom options. Activate these by adding: `Spree::PermittedAttributes.line_item_attributes << :foo` in `config/initializers/spree.rb`'
@@ -948,7 +948,7 @@ paths:
                   description: ID of the selected Shipping Method
                 shipment_id:
                   type: string
-                  description: 'ID of the selected Shipment. If not supplied it will try to set selected shipping method for all shipments'
+                  description: ID of the selected Shipment. If not supplied it will try to set selected shipping method for all shipments
               required:
                 - shipping_method_id
             examples:
@@ -2667,7 +2667,7 @@ components:
               type: object
               example:
                 recommended_by_us: true
-              description: 'The public metadata for the Line Item.'
+              description: The public metadata for the Line Item.
         relationships:
           type: object
           properties:
@@ -3183,7 +3183,7 @@ components:
       x-internal: true
     Store:
       type: object
-      description: 'Stores are the center of the Spree ecosystem. Each Spree installation can have multiple Stores. Each Store operates on a different domain or subdomain.'
+      description: Stores are the center of the Spree ecosystem. Each Spree installation can have multiple Stores. Each Store operates on a different domain or subdomain.
       title: Store
       x-internal: true
       properties:
@@ -3226,19 +3226,19 @@ components:
               description: Indicates if the Store is the default one
             supported_currencies:
               type: string
-              example: EUR,USD,GBP
+              example: 'EUR,USD,GBP'
               description: All currencies supported by store
             facebook:
               type: string
-              example: https://www.facebook.com/mystorename
+              example: 'https://www.facebook.com/mystorename'
               description: URL of Facebook page
             twitter:
               type: string
-              example: https://twitter.com/mystorename
+              example: 'https://twitter.com/mystorename'
               description: URL of Twitter page
             instagram:
               type: string
-              example: https://instagram.com/mystorename
+              example: 'https://instagram.com/mystorename'
               description: URL of Instagram page
             default_locale:
               type: string
@@ -3246,7 +3246,7 @@ components:
               description: Default locale of the Store
             supported_locales:
               type: string
-              example: en,es,de
+              example: 'en,es,de'
               description: Supported locales of the Store
             customer_support_email:
               type: string
@@ -3258,7 +3258,7 @@ components:
               description: Description of the Store which is visible in the Footer
             address:
               type: string
-              example: 813 Howard Street, Oswego NY 13126, USA
+              example: '813 Howard Street, Oswego NY 13126, USA'
               description: Address of the Store which is visible in the Footer
             contact_phone:
               type: string
@@ -3266,7 +3266,7 @@ components:
               description: Contact phone number of the Store which is visible in the Footer
             favicon_path:
               type: string
-              example: '/assets/favicon.ico'
+              example: /assets/favicon.ico
         relationships:
           type: object
           properties:
@@ -3659,7 +3659,7 @@ components:
             public_metadata:
               type: object
               example:
-                user_segment: 'supplier'
+                user_segment: supplier
               description: The public metadata for this User
         relationships:
           type: object
@@ -5104,7 +5104,7 @@ components:
                     store_credits: 0
                     completed_orders: 0
                     public_metadata:
-                      user_segment: 'supplier'
+                      user_segment: supplier
                   relationships:
                     default_billing_address:
                       data:
@@ -6224,11 +6224,11 @@ components:
                     year: 2026
                     name: John Doe
                     default: true
-                    relationships:
-                      payment_method:
-                        data:
-                          id: '1'
-                          type: payment_method
+                  relationships:
+                    payment_method:
+                      data:
+                        id: '1'
+                        type: payment_method
                 included:
                   - id: '1'
                     type: payment_method
@@ -6273,11 +6273,11 @@ components:
                       year: 2026
                       name: John Doe
                       default: true
-                      relationships:
-                        payment_method:
-                          data:
-                            id: string
-                            type: string
+                    relationships:
+                      payment_method:
+                        data:
+                          id: string
+                          type: string
                   - id: '2'
                     type: credit_card
                     attributes:
@@ -6287,11 +6287,11 @@ components:
                       year: 2030
                       name: John Doe
                       default: false
-                      relationships:
-                        payment_method:
-                          data:
-                            id: string
-                            type: string
+                    relationships:
+                      payment_method:
+                        data:
+                          id: string
+                          type: string
                 included:
                   - id: '1'
                     type: payment_method
@@ -8572,28 +8572,28 @@ components:
                     seo_title: ''
                     default_currency: USD
                     default: true
-                    supported_currencies: EUR,GBP,USD
+                    supported_currencies: 'EUR,GBP,USD'
                     facebook: 'https://www.facebook.com/mystorename'
                     twitter: 'https://twitter.com/mystorename'
                     instagram: 'https://instagram.com/mystorename'
                     default_locale: en
-                    customer_support_email: 'support@mystore.com'
-                    description: 'Mystore has been selling luxury clothing for more than 20 years and has 15 stores currently.'
+                    customer_support_email: support@mystore.com
+                    description: Mystore has been selling luxury clothing for more than 20 years and has 15 stores currently.
                     address: '813 Howard Street, Oswego NY 13126, USA'
                     contact_phone: '+123456789'
                     supported_locales: en
-                    favicon_path: '/assets/favicon.ico'
+                    favicon_path: /assets/favicon.ico
                   relationships:
                     menus:
                       data:
-                      - id: '10'
-                        type: menu
-                      - id: '11'
-                        type: menu
+                        - id: '10'
+                          type: menu
+                        - id: '11'
+                          type: menu
                     cms_pages:
                       data:
-                      - id: '5'
-                        type: cms_page
+                        - id: '5'
+                          type: cms_page
                     default_country:
                       data:
                         id: '2'
@@ -8611,28 +8611,28 @@ components:
                     seo_title: ''
                     default_currency: USD
                     default: true
-                    supported_currencies: EUR,GBP,USD
+                    supported_currencies: 'EUR,GBP,USD'
                     facebook: 'https://www.facebook.com/mystorename'
                     twitter: 'https://twitter.com/mystorename'
                     instagram: 'https://instagram.com/mystorename'
                     default_locale: en
-                    customer_support_email: 'support@mystore.com'
-                    description: 'Mystore has been selling luxury clothing for more than 20 years and has 15 stores currently.'
+                    customer_support_email: support@mystore.com
+                    description: Mystore has been selling luxury clothing for more than 20 years and has 15 stores currently.
                     address: '813 Howard Street, Oswego NY 13126, USA'
                     contact_phone: '+123456789'
                     supported_locales: en
-                    favicon_path: '/assets/favicon.ico'
+                    favicon_path: /assets/favicon.ico
                   relationships:
                     menus:
                       data:
-                      - id: '10'
-                        type: menu
-                      - id: '11'
-                        type: menu
+                        - id: '10'
+                          type: menu
+                        - id: '11'
+                          type: menu
                     cms_pages:
                       data:
-                      - id: '5'
-                        type: cms_page
+                        - id: '5'
+                          type: cms_page
                     default_country:
                       data:
                         id: '2'
@@ -8655,12 +8655,12 @@ components:
                     type: cms_page
                     attributes:
                       title: Returns Policy
-                      content:
+                      content: null
                       locale: en
                       meta_description: ''
                       meta_title: ''
                       slug: returns-policy
-                      type: Spree::Cms::Pages::StandardPage
+                      type: 'Spree::Cms::Pages::StandardPage'
                     relationships:
                       cms_sections:
                         data: []
@@ -8673,10 +8673,10 @@ components:
                     relationships:
                       menu_items:
                         data:
-                        - id: '1'
-                          type: menu_item
-                        - id: '2'
-                          type: menu_item
+                          - id: '1'
+                            type: menu_item
+                          - id: '2'
+                            type: menu_item
     Taxon:
       description: 200 Success - Returns the `taxon` object.
       content:
@@ -16490,6 +16490,7 @@ tags:
   - name: Menus
   - name: Order Status
   - name: Products
+  - name: Stores
   - name: Taxons
   - name: Wishlists
   - name: Wishlists / Wished Items
