re-add commands to install libvips on test envs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ run_tests_2_7: &run_tests_2_7
           - spree-bundle-v10-ruby-2-7-{{ .Branch }}
           - spree-bundle-v10-ruby-2-7
     - run:
+        name: Install libvips
+        command: sudo apt-get install libvips
+    - run:
         name: Ensure Bundle Install
         command: |
           bundle install
@@ -54,6 +57,9 @@ run_tests_3_0: &run_tests_3_0
         keys:
           - spree-bundle-v10-ruby-3-0-{{ .Branch }}
           - spree-bundle-v10-ruby-3-0
+    - run:
+        name: Install libvips
+        command: sudo apt-get install libvips
     - run:
         name: Ensure Bundle Install
         command: |
@@ -81,6 +87,9 @@ jobs:
             - spree-bundle-v10-ruby-2-7-{{ .Branch }}
             - spree-bundle-v10-ruby-2-7
       - run:
+          name: Install libvips
+          command: sudo apt-get install libvips
+      - run:
           name: Bundle Install
           command: |
             bundle check || bundle install
@@ -98,6 +107,9 @@ jobs:
           keys:
             - spree-bundle-v10-ruby-3-0-{{ .Branch }}
             - spree-bundle-v10-ruby-3-0
+      - run:
+          name: Install libvips
+          command: sudo apt-get install libvips
       - run:
           name: Bundle Install
           command: |
@@ -183,6 +195,9 @@ jobs:
           keys:
             - spree-bundle-v10-ruby-3-0-{{ .Branch }}
             - spree-bundle-v10-ruby-3-0
+      - run:
+          name: Install libvips
+          command: sudo apt-get install libvips
       - run:
           name: Ensure Bundle Install
           command: |
