--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,12 @@ defaults_3_1: &defaults_3_1
     - image: &ruby_3_1_image cimg/ruby:3.1.3-browsers
     - image: *redis_image
 
+defaults_3_2: &defaults_3_2
+  <<: *defaults
+  docker:
+    - image: &ruby_3_2_image cimg/ruby:3.2.0-browsers
+    - image: *redis_image
+
 run_tests_2_7: &run_tests_2_7
   <<: *defaults
   parallelism: 3
@@ -112,6 +118,35 @@ run_tests_3_1: &run_tests_3_1
     - store_test_results:
         path: /tmp/test-results
 
+run_tests_3_2: &run_tests_3_2
+  <<: *defaults_3_2
+  parallelism: 3
+  steps:
+    - checkout
+    - restore_cache:
+        keys:
+          - spree-bundle-v10-ruby-3-2-{{ .Branch }}
+          - spree-bundle-v10-ruby-3-2
+    - run:
+        name: Install libvips
+        command: sudo apt-get update && sudo apt-get install libvips42
+    - run:
+        name: Ensure Bundle Install
+        command: |
+          bundle install
+          ./bin/build-ci.rb install
+    - run:
+        name: Run rspec in parallel
+        command: ./bin/build-ci.rb test
+    - store_artifacts:
+        path: /tmp/test-artifacts
+        destination: test-artifacts
+    - store_artifacts:
+        path: /tmp/test-results
+        destination: raw-test-output
+    - store_test_results:
+        path: /tmp/test-results
+
 jobs:
   bundle_ruby_2_7:
     <<: *defaults
@@ -176,8 +211,29 @@ jobs:
           paths:
             - ~/spree/vendor/bundle
 
+  bundle_ruby_3_2:
+    <<: *defaults_3_2
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - spree-bundle-v10-ruby-3-2-{{ .Branch }}
+            - spree-bundle-v10-ruby-3-2
+      - run:
+          name: Install libvips
+          command: sudo apt-get update && sudo apt-get install libvips42
+      - run:
+          name: Bundle Install
+          command: |
+            bundle check || bundle install
+            ./bin/build-ci.rb install
+      - save_cache:
+          key: spree-bundle-v10-ruby-3-1-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+          paths:
+            - ~/spree/vendor/bundle
+
   brakeman:
-    <<: *defaults_3_1
+    <<: *defaults_3_2
     steps:
       - checkout
       - restore_cache:
@@ -231,6 +287,15 @@ jobs:
       <<: *postgres_environment
     docker:
       - image: *ruby_3_1_image
+      - image: *postgres_image
+      - image: *redis_image
+
+  tests_ruby_3_2_rails_7_0_postgres:
+    <<: *run_tests_3_2
+    environment:
+      <<: *postgres_environment
+    docker:
+      - image: *ruby_3_2_image
       - image: *postgres_image
       - image: *redis_image
 
@@ -321,9 +386,13 @@ workflows:
       - bundle_ruby_2_7
       - bundle_ruby_3_0
       - bundle_ruby_3_1
+      - bundle_ruby_3_2
       - brakeman:
           requires:
-            - bundle_ruby_3_1
+            - bundle_ruby_3_2
+      - tests_ruby_3_2_rails_7_0_postgres:
+          requires:
+            - bundle_ruby_3_2
       - tests_ruby_3_1_rails_7_0_postgres:
           requires:
             - bundle_ruby_3_1
