--- a/api/docs/v2/platform/resources/classification.yaml
+++ b/api/docs/v2/platform/resources/classification.yaml
@@ -1,11 +1,11 @@
 get:
-  summary: Return an Address
+  summary: Return a Classification
   tags:
-  - Addresses
+  - Classifications
   security:
   - bearer_auth: []
-  description: Returns an Address
-  operationId: show-address
+  description: Returns a Classification
+  operationId: show-classification
   parameters:
   - name: id
     in: path
@@ -16,7 +16,7 @@ get:
     in: query
     description: 'Select which associated resources you would like to fetch, see:
       <a href="https://jsonapi.org/format/#fetching-includes">https://jsonapi.org/format/#fetching-includes</a>'
-    example: user,country,state
+    example: product,taxon
     schema:
       type: string
   responses:
@@ -29,35 +29,20 @@ get:
               value:
                 data:
                   id: '6'
-                  type: address
+                  type: classification
                   attributes:
-                    firstname: John
-                    lastname: Doe
-                    address1: 6 Lovely Street
-                    address2: Northwest
-                    city: Herndon
-                    zipcode: '35005'
-                    phone: 555-555-0199
-                    state_name:
-                    alternative_phone: 555-555-0199
-                    company: Company
-                    created_at: '2022-11-08T19:33:51.740Z'
-                    updated_at: '2022-11-08T19:33:51.740Z'
-                    deleted_at:
-                    label:
-                    public_metadata: {}
-                    private_metadata: {}
+                    position: 1
+                    created_at: '2022-11-08T19:33:58.452Z'
+                    updated_at: '2022-11-08T19:33:58.452Z'
                   relationships:
-                    country:
+                    product:
                       data:
-                        id: '6'
-                        type: country
-                    state:
+                        id: '14'
+                        type: product
+                    taxon:
                       data:
-                        id: '6'
-                        type: state
-                    user:
-                      data:
+                        id: '12'
+                        type: taxon
           schema:
             "$ref": "../schemas/Resource.yaml"
     '404':
@@ -65,13 +50,13 @@ get:
     '401':
       "$ref": "../responses/AuthenticationFailedError.yaml"
 patch:
-  summary: Update an Address
+  summary: Update a Classification
   tags:
-  - Addresses
+  - Classifications
   security:
   - bearer_auth: []
-  description: Updates an Address
-  operationId: update-address
+  description: Updates a Classification
+  operationId: update-classification
   parameters:
   - name: id
     in: path
@@ -82,7 +67,7 @@ patch:
     in: query
     description: 'Select which associated resources you would like to fetch, see:
       <a href="https://jsonapi.org/format/#fetching-includes">https://jsonapi.org/format/#fetching-includes</a>'
-    example: user,country,state
+    example: product,taxon
     schema:
       type: string
   responses:
@@ -95,35 +80,20 @@ patch:
               value:
                 data:
                   id: '8'
-                  type: address
+                  type: classification
                   attributes:
-                    firstname: Jack
-                    lastname: Doe
-                    address1: 8 Lovely Street
-                    address2: Northwest
-                    city: Herndon
-                    zipcode: '35005'
-                    phone: 555-555-0199
-                    state_name:
-                    alternative_phone: 555-555-0199
-                    company: Company
-                    created_at: '2022-11-08T19:33:52.269Z'
-                    updated_at: '2022-11-08T19:33:52.501Z'
-                    deleted_at:
-                    label:
-                    public_metadata: {}
-                    private_metadata: {}
+                    position: 1
+                    created_at: '2022-11-08T19:33:59.135Z'
+                    updated_at: '2022-11-08T19:33:59.135Z'
                   relationships:
-                    country:
+                    product:
                       data:
-                        id: '9'
-                        type: country
-                    state:
+                        id: '16'
+                        type: product
+                    taxon:
                       data:
-                        id: '8'
-                        type: state
-                    user:
-                      data:
+                        id: '16'
+                        type: taxon
           schema:
             "$ref": "../schemas/Resource.yaml"
     '422':
@@ -133,11 +103,9 @@ patch:
           examples:
             Example:
               value:
-                error: First Name can't be blank and Last Name can't be blank
+                error: Product can't be blank
                 errors:
-                  firstname:
-                  - can't be blank
-                  lastname:
+                  product:
                   - can't be blank
           schema:
             "$ref": "../schemas/ValidationErrors.yaml"
@@ -149,15 +117,15 @@ patch:
     content:
       application/json:
         schema:
-          "$ref": "../schemas/Addresses/UpdateParams.yaml"
+          "$ref": "../schemas/Classifications/UpdateParams.yaml"
 delete:
-  summary: Delete an Address
+  summary: Delete a Classification
   tags:
-  - Addresses
+  - Classifications
   security:
   - bearer_auth: []
-  description: Deletes an Address
-  operationId: delete-address
+  description: Deletes a Classification
+  operationId: delete-classification
   parameters:
   - name: id
     in: path
